# spiders-wm

./: .gitignore  AGENTS.md  CSS-PLAN.md  Cargo.toml  README.md  SESSION_HANDOFF.md  SPIDERS_WM2_ARCHITECTURE.md  WM-RUNTIME-PERFORMANCE.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/spiders-wm/: Cargo.toml
apps/spiders-wm-web/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
apps/spiders-wm-web/assets/: tailwind.css
apps/spiders-wm-web/assets/styling/: main.css
apps/spiders-wm-web/src/: bindings.rs  components.rs  layout_runtime.rs  main.rs  session.rs  workspace.rs
apps/spiders-wm-web/src/components/: panel.rs  select.rs
apps/spiders-wm-www/: Cargo.toml  Trunk.toml  index.css  index.html  leptosfmt.toml
apps/spiders-wm-www/fixtures/spiders-wm/: config.ts  config.tsx  index.css
apps/spiders-wm-www/js/: package.json  tsconfig.json  vite.config.js
apps/spiders-wm-www/js/src/: css-lsp-client.ts  css-lsp-worker.ts  monaco-host.ts  xterm-host.ts
apps/spiders-wm-www/src/: app_state.rs  bindings.rs  browser_ipc.rs  components.rs  editor_files.rs  editor_host.rs  layout_runtime.rs  main copy.rs  main.rs  perf.rs  session.rs  workspace.rs  xterm_host_bundle.js
apps/spiders-wm-www/src/components/: context_menu.rs  panel.rs  select.rs  tooltip.rs
apps/spiders-wm-www/src/views/: mod.rs
apps/spiders-wm-x/: Cargo.toml
apps/spiders-wm-x/src/: app.rs  cli.rs  config.rs  ipc.rs  main.rs
apps/spiders-wm-x/src/backend/: atoms.rs  discovery.rs  event.rs  input.rs  mod.rs  output.rs
apps/spiders-wm/src/: debug.rs  ipc.rs  main.rs  state.rs
apps/spiders-wm/src/actions/: facade.rs  focus.rs  mod.rs  output.rs  window.rs  workspace.rs
apps/spiders-wm/src/app/: bootstrap.rs  lifecycle.rs  mod.rs
apps/spiders-wm/src/backend/: drm.rs  mod.rs  output.rs  session.rs  tty.rs  tty_drm.rs  tty_render.rs  tty_setup.rs  winit.rs
apps/spiders-wm/src/compositor/: apply.rs  input.rs  layout.rs  lookup.rs  mod.rs  navigation.rs  popups.rs  rendering.rs  windows.rs  workspaces.rs
apps/spiders-wm/src/frame_sync/: mod.rs  render_snapshot.rs  transaction.rs
apps/spiders-wm/src/handlers/: compositor.rs  fractional_scale.rs  layer_shell.rs  mod.rs  pointer_constraints.rs  relative_pointer.rs  virtual_keyboard.rs  xdg_activation.rs  xdg_decoration.rs  xdg_shell.rs
apps/spiders-wm/src/runtime/: command.rs  mod.rs
apps/spiders-wm/src/scene/: adapter.rs
apps/spiders-wm/tests/: live_ipc_smoke.rs  live_pointer_protocols.rs  live_pointer_smoke.rs
crates/cli/: Cargo.toml
crates/cli/completions/: _spiders-cli  spiders-cli.bash  spiders-cli.fish
crates/cli/core/: Cargo.toml
crates/cli/core/src/: command.rs  completion.rs  completions.rs  lib.rs  metadata.rs  parse.rs
crates/cli/src/: bootstrap.rs  main.rs  report.rs
crates/cli/tests/: check_config.rs
crates/config/: Cargo.toml
crates/config/src/: model.rs  runtime.rs
crates/config/src/authoring_layout/: prepared_cache.rs  service.rs  source_bundle_service.rs  tests.rs
crates/css-lsp/: Cargo.toml
crates/css-lsp/core/: Cargo.toml
crates/css-lsp/core/src/: hover.rs  (+10 more)
crates/css-lsp/src/: backend.rs  code_actions.rs  completion.rs  definition.rs  diagnostics.rs  documents.rs  hover.rs  main.rs  project.rs  references.rs  rename.rs  symbols.rs  syntax.rs  workspace.rs  workspace_symbols.rs
crates/css-lsp/stdio/: Cargo.toml
crates/css-lsp/web/: Cargo.toml
crates/ipc/browser/: Cargo.toml
crates/ipc/native/: Cargo.toml
crates/runtimes/js/: Cargo.toml
crates/spider-cli/: Cargo.toml
crates/spider-cli/src/: main.rs
crates/spider-compositor/: Cargo.toml
crates/spiders-cli/: Cargo.toml
crates/spiders-cli/src/: bootstrap.rs  main.rs  report.rs
crates/spiders-cli/tests/: check_config.rs  fixture_builders.rs
crates/spiders-compositor/: Cargo.toml
crates/spiders-compositor/src/: actions.rs  app.rs  backend.rs  controller.rs  effects.rs  host.rs  ipc.rs  lib.rs  runner.rs  runtime.rs  scenario.rs  script.rs  session.rs  smithay_adapter.rs  smithay_runtime.rs  smithay_state.rs  smithay_workspace.rs  startup.rs  titlebar.rs  topology.rs  transcript.rs  wm.rs
crates/spiders-config/: Cargo.toml
crates/spiders-config/src/: authored.rs  authoring_layout.rs  compile.rs  graph.rs  lib.rs  loader.rs  model.rs  runtime.rs  service.rs
crates/spiders-layout/: Cargo.toml
crates/spiders-layout/src/: ast.rs  css.rs  lib.rs  matching.rs  pipeline.rs  stylo_adapter.rs
crates/spiders-river/: Cargo.toml  PLAN.md
crates/spiders-river/src/: action_bridge.rs  layout_adapter.rs  lib.rs  main.rs
crates/spiders-web-bindings/: Cargo.toml
crates/spiders-web-bindings/src/: lib.rs
crates/spiders-wm/: Cargo.toml
crates/spiders-wm-river/: Cargo.toml
crates/spiders-wm-river/src/: action_bridge.rs  layout_adapter.rs  lib.rs  main.rs
crates/spiders-wm-runtime/: Cargo.toml
crates/spiders-wm-runtime/src/: command.rs  config.rs  context.rs  host.rs  layout.rs  lib.rs  session.rs  snapshot.rs  wm_runtime.rs
crates/spiders-wm/src/: action_bridge.rs  actions.rs  app.rs  backend.rs  controller.rs  domain.rs  domain_session.rs  effects.rs  host.rs  ipc.rs  layout_adapter.rs  lib.rs  main.rs  protocol.rs  runner.rs  runtime.rs  scenario.rs  script.rs  session.rs  smithay_adapter.rs  smithay_runtime.rs  smithay_state.rs  smithay_workspace.rs  startup.rs  titlebar.rs  topology.rs  transcript.rs  transitions.rs  wm.rs
crates/spiders-wm2/: CHECKLIST.md  Cargo.toml
crates/spiders-wm2/src/: app.rs  bindings.rs  closing.rs  command.rs  config.rs  input.rs  ipc.rs  layout.rs  layout_runtime.rs  main.rs  placement.rs  render.rs  runtime.rs  state.rs  transaction.rs  transactions.rs  winit.rs  wm.rs
crates/spiders-wm2/tests/: live_ipc_smoke.rs
crates/titlebar/core/: Cargo.toml
crates/titlebar/native/: Cargo.toml
crates/wm-river/: Cargo.toml
crates/wm-river/src/: action_bridge.rs  layout_adapter.rs  lib.rs
crates/wm-runtime/: Cargo.toml
crates/wm-runtime/src/: bindings.rs  command.rs  context.rs  diagnostic.rs  host.rs  layout.rs  lib.rs  session.rs  snapshot.rs  wm_runtime.rs
(+485 files in other folders)
