[workspace]
resolver = "2"
members = [
  "crates/spiders-wm-runtime",
  "crates/spiders-web-bindings",
  "crates/spiders-cli",
  "crates/spiders-core",
  "crates/spiders-css",
  "crates/spiders-config",
  "crates/spiders-ipc",
  "crates/spiders-logging",
  "crates/spiders-wm-river",
  "crates/spiders-scene",
  "crates/runtimes/js",
  "apps/spiders-wm",
  "apps/spiders-wm-www",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
clsx = "0.1.1"
console_error_panic_hook = "0.1.7"
dioxus = "0.7.1"
js-sys = "0.3"
leptos = "0.8.17"
leptos_router = "0.8.8"
oxc = "0.119.0"
oxc_resolver = "11.19.1"
regex = "1"
rquickjs = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
