[workspace]
resolver = "2"
members = [
  "crates/fonts/native",
  "crates/wm-runtime",
  "crates/cli",
  "crates/core",
  "crates/css",
  "crates/css-lsp/core",
  "crates/css-lsp/stdio",
  "crates/css-lsp/web",
  "crates/config",
  "crates/ipc",
  "crates/logging",
  "crates/wm-river",
  "crates/scene",
  "crates/titlebar/native",
  "crates/titlebar/core",
  "crates/titlebar/web",
  "crates/runtimes/js/core",
  "crates/runtimes/js/browser",
  "crates/runtimes/js/native",
  "apps/spiders-wm",
  "apps/spiders-wm-www",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
clsx = "0.1.1"
console_error_panic_hook = "0.1.7"
cssparser = "0.36"
dioxus = "0.7.1"
js-sys = "0.3"
leptos = "0.8.17"
leptos_router = "0.8.8"
lsp-server = "0.7"
lsp-types = "0.94"
oxc = "0.119.0"
oxc_resolver = "11.19.1"
regex = "1"
rquickjs = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tokio = { version = "=1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }
thiserror = "2"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
