[package]
name = "spiders-wm-www"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
clsx.workspace = true
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
spiders-config = { path = "../../crates/spiders-config" }
spiders-core = { path = "../../crates/spiders-core" }
spiders-runtime-js-browser = { path = "../../crates/runtimes/js/browser" }
spiders-runtime-js-core = { path = "../../crates/runtimes/js/core" }
spiders-wm-runtime = { path = "../../crates/spiders-wm-runtime" }
spiders-scene = { path = "../../crates/spiders-scene" }

serde.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "CustomEvent",
  "Element",
  "KeyboardEvent",
  "HtmlElement",
  "Window",
  "Location",
  "EventTarget",
] }
