[package]
name = "spiders-wm-www"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
clsx.workspace = true
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
spiders-config = { path = "../../crates/config" }
spiders-core = { path = "../../crates/core" }
spiders-css = { path = "../../crates/css" }
spiders-runtime-js-browser = { path = "../../crates/runtimes/js/browser" }
spiders-runtime-js-core = { path = "../../crates/runtimes/js/core" }
spiders-wm-runtime = { path = "../../crates/wm-runtime" }
spiders-scene = { path = "../../crates/scene" }

serde.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "Blob",
  "BlobPropertyBag",
  "CustomEvent",
  "Document",
  "Element",
  "HtmlAnchorElement",
  "KeyboardEvent",
  "HtmlElement",
  "Navigator",
  "Window",
  "Location",
  "EventTarget",
  "Url",
] }
