[package]
name = "spiders-wm-x"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
xcb = { workspace = true, features = ["randr"] }
spiders-config = { path = "../../crates/config" }
spiders-core = { path = "../../crates/core" }
spiders-logging = { path = "../../crates/logging" }
spiders-runtime-js-native = { path = "../../crates/runtimes/js/native" }
spiders-wm-runtime = { path = "../../crates/wm-runtime" }
