[package]
name = "spiders-wm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
spiders-config = { path = "../../crates/spiders-config" }
spiders-ipc = { path = "../../crates/spiders-ipc" }
spiders-scene = { path = "../../crates/spiders-scene" }
spiders-css = { path = "../../crates/spiders-css" }
spiders-core = { path = "../../crates/spiders-core" }
spiders-runtime-js-native = { path = "../../crates/runtimes/js/native" }
spiders-wm-runtime = { path = "../../crates/spiders-wm-runtime" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

[dependencies.smithay]
path = "../../../smithay"
default-features = false
features = ["backend_drm", "backend_winit", "desktop", "wayland_frontend"]

[dev-dependencies]
serde_json.workspace = true
