[package]
name = "spiders-wm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
spiders-config = { path = "../../crates/config" }
spiders-ipc = { path = "../../crates/ipc" }
spiders-scene = { path = "../../crates/scene" }
spiders-css = { path = "../../crates/css" }
spiders-core = { path = "../../crates/core" }
spiders-runtime-js-native = { path = "../../crates/runtimes/js/native" }
spiders-titlebar-core = { path = "../../crates/titlebar/core" }
spiders-titlebar-native = { path = "../../crates/titlebar/native" }
spiders-wm-runtime = { path = "../../crates/wm-runtime" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

[dependencies.smithay]
path = "../../../smithay"
default-features = false
features = ["backend_drm", "backend_winit", "desktop", "wayland_frontend"]

[dev-dependencies]
serde_json.workspace = true
