[package]
name = "spiders-wm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
libseat = ["smithay/backend_session_libseat"]
tty-preview = [
  "libseat",
  "dep:input",
  "smithay/backend_egl",
  "smithay/backend_udev",
  "smithay/backend_libinput",
  "smithay/backend_gbm",
  "smithay/renderer_multi",
]

[dependencies]
anyhow.workspace = true
spiders-config = { path = "../../crates/config" }
spiders-ipc = { path = "../../crates/ipc" }
spiders-scene = { path = "../../crates/scene" }
spiders-css = { path = "../../crates/css" }
spiders-core = { path = "../../crates/core" }
spiders-runtime-js-native = { path = "../../crates/runtimes/js/native" }
spiders-wm-runtime = { path = "../../crates/wm-runtime" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde.workspace = true
serde_json.workspace = true
input = { version = "0.9.1", optional = true, default-features = false, features = ["udev"] }
rustix = { version = "1.0.7", features = ["fs"] }
drm-fourcc = "2.2.0"
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

[dependencies.smithay]
path = "../../../smithay"
default-features = false
features = ["backend_drm", "backend_session", "backend_winit", "desktop", "wayland_frontend"]

[dev-dependencies]
