[package]
name = "spiders-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../config" }
spiders-cli-core = { path = "./core" }
spiders-ipc = { path = "../ipc" }
spiders-logging = { path = "../logging" }
spiders-scene = { path = "../scene" }
spiders-runtime-js-native = { path = "../runtimes/js/native" }
spiders-core = { path = "../core" }
spiders-wm-runtime = { path = "../wm-runtime" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "spiders-cli"
path = "src/main.rs"
