[package]
name = "spiders-css-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spiders-css = { path = "../css" }
spiders-runtime-js-core = { path = "../runtimes/js/core" }
cssparser.workspace = true
oxc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
