[package]
name = "spider-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spider-config = { path = "../spider-config" }
spider-effects = { path = "../spider-effects" }
spider-ipc = { path = "../spider-ipc" }
spider-layout = { path = "../spider-layout" }
spider-shared = { path = "../spider-shared" }
thiserror.workspace = true
