[package]
name = "spiders-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../spiders-config" }
spiders-ipc = { path = "../spiders-ipc" }
spiders-scene = { path = "../spiders-scene" }
spiders-runtime-js = { path = "../runtimes/js" }
spiders-shared = { path = "../spiders-shared" }
spiders-tree = { path = "../spiders-tree" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "spiders-cli"
path = "src/main.rs"
