[package]
name = "spiders-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../spiders-config" }
spiders-ipc = { path = "../spiders-ipc" }
spiders-logging = { path = "../spiders-logging" }
spiders-scene = { path = "../spiders-scene" }
spiders-runtime-js-native = { path = "../runtimes/js/native" }
spiders-core = { path = "../spiders-core" }
spiders-wm-runtime = { path = "../spiders-wm-runtime" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "spiders-cli"
path = "src/main.rs"
