[package]
name = "spiders-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spiders-config = { path = "../spiders-config" }
spiders-effects = { path = "../spiders-effects" }
spiders-ipc = { path = "../spiders-ipc" }
spiders-layout = { path = "../spiders-layout" }
spiders-shared = { path = "../spiders-shared" }
thiserror.workspace = true
