[package]
name = "spiders-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
smithay-winit = ["dep:smithay"]

[dependencies]
spiders-config = { path = "../spiders-config" }
spiders-effects = { path = "../spiders-effects" }
spiders-ipc = { path = "../spiders-ipc" }
spiders-layout = { path = "../spiders-layout" }
spiders-runtime = { path = "../spiders-runtime" }
spiders-shared = { path = "../spiders-shared" }
serde.workspace = true
serde_json.workspace = true
smithay = { path = "/home/akisarou/projects/smithay", default-features = false, features = ["backend_winit", "desktop", "wayland_frontend"], optional = true }
thiserror.workspace = true
