[package]
name = "spiders-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
smithay-winit = ["dep:smithay"]

[dependencies]
font8x8 = "0.3"
spiders-config = { path = "../spiders-config" }
spiders-effects = { path = "../spiders-effects" }
spiders-ipc = { path = "../spiders-ipc" }
spiders-layout = { path = "../spiders-layout" }
spiders-runtime = { path = "../spiders-runtime" }
spiders-shared = { path = "../spiders-shared" }
serde.workspace = true
serde_json.workspace = true
smithay = { path = "/home/akisarou/projects/smithay", default-features = false, features = ["backend_winit", "desktop", "wayland_frontend"], optional = true }
thiserror.workspace = true

[dev-dependencies]
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "staging"] }
