[package]
name = "spiders-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spiders-layout = { path = "../spiders-layout" }
spiders-shared = { path = "../spiders-shared" }
thiserror.workspace = true
