[package]
name = "spiders-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spiders-scene = { path = "../spiders-scene" }
spiders-core = { path = "../spiders-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
