[package]
name = "spiders-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spiders-shared = { path = "../spiders-shared" }
swc_common = "19.0.0"
swc_css_ast = "19.0.0"
swc_css_codegen = "19.0.0"
swc_css_parser = "19.0.0"
taffy = "0.9.2"
thiserror.workspace = true
