[package]
name = "spiders-web-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spiders-core = { path = "../spiders-core" }
spiders-css = { path = "../spiders-css" }
spiders-scene = { path = "../spiders-scene" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
