[package]
name = "spiders-wm2"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spiders-config = { path = "../spiders-config" }
spiders-runtime-js = { path = "../runtimes/js" }
spiders-shared = { path = "../spiders-shared" }
spiders-tree = { path = "../spiders-tree" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }

[dependencies.smithay]
path = "../../../smithay"
default-features = false
features = [
    "backend_drm",
    "backend_winit",
    "desktop",
    "wayland_frontend",
]