[package]
name = "spiders-wm-river"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
bitflags = "2"
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../config" }
spiders-ipc = { path = "../ipc" }
spiders-logging = { path = "../logging" }
spiders-scene = { path = "../scene" }
spiders-runtime-js-native = { path = "../runtimes/js/native" }
spiders-core = { path = "../core" }
spiders-css = { path = "../css" }
spiders-wm-runtime = { path = "../wm-runtime" }
thiserror.workspace = true
tempfile = "3"
tracing = "0.1"
wayland-backend = "0.3"
wayland-client = "0.31"
wayland-scanner = "0.31"
xkbcommon = "0.8"
