[package]
name = "spiders-wm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
spiders-config = { path = "../config" }
spiders-core = { path = "../core" }
spiders-css = { path = "../css" }
spiders-scene = { path = "../scene" }
tracing.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
serde_json.workspace = true
