[package]
name = "spiders-css-lsp-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spiders-css-lsp-core = { path = "../core" }
lsp-server.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
