[package]
name = "spiders-ipc-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
spiders-core = { path = "../../core" }
spiders-ipc-core = { path = "../core" }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["MessageChannel", "MessageEvent", "MessagePort"] }
