[package]
name = "spiders-runtime-js"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxc = { version = "0.119.0", features = ["full"] }
oxc_resolver = "11.19.1"
rquickjs = { version = "0.11.0", features = ["loader"] }
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../../spiders-config" }
spiders-layout = { path = "../../spiders-layout" }
spiders-shared = { path = "../../spiders-shared" }
thiserror.workspace = true
