[package]
name = "spiders-runtime-js"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxc = { workspace = true, features = ["full"] }
oxc_resolver.workspace = true
rquickjs = { workspace = true, features = ["loader"] }
serde.workspace = true
serde_json.workspace = true
spiders-config = { path = "../../spiders-config" }
spiders-scene = { path = "../../spiders-scene" }
spiders-core = { path = "../../spiders-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
